--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "lucide": "^0.542.0",
     "lucide-react": "^0.542.0",
     "mongodb": "^6.19.0",
+    "motion": "^12.23.12",
     "next": "15.5.2",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "recharts": "^2.15.4",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.8"
   },
